<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary">

    <!-- Modern Toolbar -->
    <com.cactuvi.app.ui.common.ModernToolbar
        android:id="@+id/modernToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/continue_watching"
        app:showActionButton="false"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Content -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_s"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/modernToolbar"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Empty State -->
    <LinearLayout
        android:id="@+id/emptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:padding="@dimen/spacing_xxxl"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_play_circle"
            app:tint="@color/text_disabled"
            android:alpha="0.5"
            android:contentDescription="@string/continue_watching" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_l"
            android:text="@string/no_watch_history"
            android:textColor="@color/text_secondary"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_s"
            android:text="@string/start_watching"
            android:textColor="@color/text_tertiary"
            android:textSize="14sp"
            android:gravity="center" />
            
    </LinearLayout>

    <!-- Loading -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/brand_green"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
